--- a/sketches/Coker et al (2009).Rmd
+++ b/sketches/Coker et al (2009).Rmd
@@ -19,10 +19,9 @@ library(brms)
 library(tidybayes)
 ```
 
-## Bad habbits!
+## Constraint-induced movement therapy on baby diagnosed with hemiplegic cerebral palsy
 
 Coker et al (2009; https://doi.org/10.3233/NRE-2009-0469) used a multivariate single-case ABAB design to evaluate a modified constraint-induced movement therapy on baby diagnosed with hemiplegic cerebral palsy.
-
 
 ```{r}
 # load the data
@@ -32,11 +31,11 @@ load(file = "/Users/solomonkurz/Dropbox/Experimental-design-and-the-GLMM/sketche
 glimpse(coker2009)
 ```
 
-The data are in the long format with respect to the three behavior types listed in the `behavior` column. Each was measured across 19 successive trials, which are listed in the `trial` column. The `trial0` column is `trial - `, to help the intercept in regression models. Each of the behaviors were assessed within four experimental phases (i.e., A1, B1, A2, B2), which are recorded in the `phase` column. The `ptrial` and `ptrial0` columns list the trials within each of the four phases, restarting the sequence at the beginning of each `phase`. The `total` column is the number of observed behaviors within a given `trial`. 
+The data are in the long format with respect to the three behavior types listed in the `behavior` column. Throughout the intervention, the baby was videotaped during 10 minutes of unstructured play. A blinded examiner coded how many times the baby used his affected right arm and hand during developmentally appropriate tasks such as (a) reaching for an object, (b) weightbearing (stabalizing  himself) , and (c) approaching midline during each 10-minutes play session. These were measured across 19 successive trials, which are listed in the `trial` column. The `trial0` column is `trial - `, to help the intercept in regression models. Each of the behaviors were assessed within four experimental phases (i.e., A1, B1, A2, B2), which are recorded in the `phase` column. The `ptrial` and `ptrial0` columns list the trials within each of the four phases, restarting the sequence at the beginning of each `phase`. The `total` column is the number of observed behaviors within a given `trial`. 
 
 ### EDA.
 
-Here are the number of trials within each experimental phase.
+Here are the number of trials within each experimental phase. They are the same for each `behavior`.
 
 ```{r}
 coker2009 %>%
@@ -82,7 +81,7 @@ We explicitly removed the standard error ribbons from the plot with `se = FALSE`
 
 ## Models
 
-There are a handful of different models we might use to analyze these data. We'll consider three. In all cases, we'll model the behavioral counts with the Poisson likelihood. As the data are in the long format with respect to the behavior types, the model will be multilevel in that behavioral counts will be nested within the three levels of `behavior`.
+There are a handful of different models we might use to analyze these data. We'll consider three. In all cases, we'll model the behavioral counts with the Poisson likelihood, which is canonical for unbounded counts. As the data are in the long format with respect to the `behavior` types, the model will be multilevel in that behavioral counts will be nested within the three levels of `behavior`.
 
 The first model will be the unconditional growth model
 
@@ -141,7 +140,7 @@ $$
 
 Here the ${[\text{phase}]}$ subscript indicates the $\alpha$ parameter is indexed by the four levels of `phase`, which all also vary across the three levels of `behavior` as indicated by the `behavior`-specific deviations around those four grand means $u_{[\text{phase}]i}$. Those four deviation parameters are modeled as multivariate normal in the typical way, with the $\mathbf S$ and $\mathbf R$ matrices now following a $4 \times 4$ structure. 
 
-The final model is what you might call the full or theory based model:
+The final model is what you might call the full or theory-based model. It's a conditional growth model of the form
 
 $$
 \begin{align*}
@@ -172,6 +171,7 @@ where now the intercepts and `ptrial0` slopes vary across the four levels of `ph
 Here's how to fit the models with **brms**.
 
 ```{r}
+# unconditional growth
 fit1 <- brm(
   data = coker2009,
   family = poisson,
@@ -186,6 +186,7 @@ fit1 <- brm(
   file = "fits/fit1.coker2009"
 )
 
+# means by phase
 fit2 <- brm(
   data = coker2009,
   family = poisson,
@@ -199,6 +200,7 @@ fit2 <- brm(
   file = "fits/fit2.coker2009"
 )
 
+# conditional growth model (within-phase growth)
 fit3 <- brm(
   data = coker2009,
   family = poisson,
@@ -256,7 +258,7 @@ rbind(
         strip.text = element_text(color = "black"))
 ```
 
-IMO, you're best off using `fit2`, the full theoretically-justified conditional growth model. However, you could compare the models by their out-of-sample performance with their LOO-CV estimates and contrasts.
+IMO, you're best off using `fit3`, the full theoretically-justified conditional growth model. However, you could compare the models by their out-of-sample performance with their LOO-CV estimates and contrasts.
 
 ```{r}
 fit1 <- add_criterion(fit1, criterion = "loo")
