--- a/sketches/Allen & Evans (2001).Rmd
+++ b/sketches/Allen & Evans (2001).Rmd
@@ -43,7 +43,7 @@ allen2001 %>%
   count(phase)
 ```
 
-The `B1` phases all have associated `criterion` levels. 
+The `B` phases all have associated `criterion` levels. 
 
 ```{r}
 allen2001 %>% 
@@ -116,7 +116,7 @@ allen2001 %>%
   distinct(phase, a, b1, b2, b3, b4, b5, b6, b7)
 ```
 
-You don't strictly need to do this because the `phase` variable will actually get the job done. But the dummies can be instructive and we may as well show the way with both.
+You don't strictly need to do this because the `phase` variable will actually get the job done. But the dummies can be instructive and we may as well show how to fit the model with both strategies.
 
 ## Models
 
@@ -125,6 +125,8 @@ In this file, we'll model the data with three model types.
 1. The dummy model
 2. The one-hot model
 3. The theory-based model
+
+The first two are pretty conventional. The third model requires we leave convention behind.
 
 ### The dummy model.
 
@@ -145,7 +147,7 @@ Next we consider our priors.
 
 We begin setting our priors with the $\beta_0$ parameter, the expected value during the baseline period. We know that Amy's endocrinologist recommended she check her blood glucose levels $6$ to $12$ times a day, and since her parents initiated a professional intervention, we know her baseline values are likely well beyond that range. But how how much higher should we consider?
 
-One approach is to consider increases in orders of magnitude. If she was checking $10$ times more than the upper limit of her endocrinologist's recommended range, that would mean $12 \times 10 = 120$ checks per day. A two-order-of-magnitude increase would mean $1{,}200$ checks. Given an $8$-hours night sleep, if Amy checked her glucose at a rate of once a minute all day long, that would give her $60 \times 16 = 960$ checks a day, which is approaching that two-order-of-magnitude increase. So we might want a prior that puts most of the prior mass above 12 and less than the $960-1{,}200$ range. 
+One approach is to consider increases in orders of magnitude. If she was checking $10$ times more than the upper limit of her endocrinologist's recommended range, that would mean $12 \times 10 = 120$ checks per day. A two-order-of-magnitude increase would mean $1{,}200$ checks. Given an $8$-hours night sleep, if Amy checked her glucose at a rate of once a minute all day long, that would give her $60 \times 16 = 960$ checks a day, which is approaching that two-order-of-magnitude increase. So we might want a prior that puts most of the prior mass above 12 and below the $960-1{,}200$ range. 
 
 Although we don't have to, it's typical to use a Gaussian prior for $\beta$ parameters, so we'll do so here, too. As we're using the conventional log link for the Poisson likelihood, that means the Gaussian prior on the model space will have exponentiated Gaussian implications on the count space. To get a sense, here are the means and $95$ percentile ranges on the count metric for $\mathcal N(\log (12 \times 10), 1)$.
 
@@ -173,7 +175,7 @@ tibble(prior = rnorm(n = 1e5, mean = log(12 * 10), sd = 1)) %>%
 
 The dots and two levels of horizontal lines mark off the median, interquartile range, and $95$-percentile range for the prior predictive distribution. The $\mathcal N(\log (12 \times 10), 1)$ prior is broad across the ranges we have considered so far and I'm comfortable sticking with it, going forward. But you should feel free to experiment with different distributions.
 
-Next we consider the priors for $\beta_1$ through $\beta_7$, our deviation parameters. As we're working on the log scale, the $\mathcal N(0, 1)$ is often good places to start. It allows for small, moderate and even large deviations from the reference category, but rule out very large deviations. In this case, however, keep in mind that if our posterior for $\beta_0$ ends up rather high, the posteriors for our upper-end $\beta$ parameters will need to be large and negative to compensate. For example, let's say the average baseline rate is near $250$. Since we expect the mean for the `B7` phase to be about $12$, that would produce a $\beta_7$ parameter of around $-3$.
+Next we consider the priors for $\beta_1$ through $\beta_7$, our deviation parameters. As we're working on the log scale, the $\mathcal N(0, 1)$ is often a good place to start. It allows for small, moderate and even large deviations from the reference category, but rules out very large deviations. In this case, however, keep in mind that if our posterior for $\beta_0$ ends up rather high, the posteriors for our upper-end $\beta$ parameters will need to be large and negative to compensate. For example, let's say the average baseline rate is near $250$. Since we expect the mean for the `B7` phase to be about $12$, that would produce a $\beta_7$ parameter of around $-3$.
 
 ```{r}
 log(250) - log(12)
@@ -268,7 +270,7 @@ Look at those sweet steps!
 
 ### The one-hot model.
 
-Next we consider a closely-related version fo the model inspired by our friends in the machine-learning community, which follows the basic form
+Next we consider a closely-related version of the dummy model, inspired by our friends in the machine-learning community, which follows the basic form
 
 $$
 \begin{align*}
@@ -277,7 +279,7 @@ $$
 \end{align*}
 $$
 
-where $\beta_0$ is still the mean during the baseline period, but now we explicitly include the `a` dummy variable in the equation, while we continue to retain all the other $7$ dummies for the B phases. Whereas man social scientists tend to leave out the dummy variable which encodes the reference category--the way we omitted the `a` dummy in `fit1`--, the one-hot encoding method includes ALL dummy variables. As a consequence, we no longer have a reference category. Rather, the coefficient for each dummy $\beta_0, \dots, \beta7$ is directly parameterized as the mean of its own phase, without reference to any other phase.
+where $\beta_0$ is still the mean during the baseline period, but now we explicitly include the `a` dummy variable in the equation, while we continue to retain all the other $7$ dummies for the B phases. Whereas many social scientists tend to leave out the dummy variable which encodes the reference category--the way we omitted the `a` dummy in `fit1`--, the one-hot encoding method includes ALL dummy variables. As a consequence, we no longer have a reference category. Rather, the coefficient for each dummy $\beta_0, \dots, \beta7$ is directly parameterized as the mean of its own phase, without reference to any other phase.
 
 The one-hot parameterization is attractive because it offers a more natural way for setting our priors. Consider, again, the distinct levels of `phase` and their associated `criterion` values.
 
@@ -289,13 +291,13 @@ allen2001 %>%
 
 We still don't have a great expected value for the baseline A period, so we'll retina the $\mathcal N(\log (120), 1)$ prior from before. But now we have very specific expectations for the average number of checks within the B phases which are defined by the values in the `criterion` column. So for the priors for $\beta_1, \dots, \beta7$, I propose we use a Gaussian prior centered on the log of each `criterion` value. 
 
-The next issue is how tot set the $\sigma$ hyperparameters, which will express how certain our priors are for $\beta_1, \dots, \beta7$. As is turns out, 
+The next issue is how we might set the $\sigma$ hyperparameters, which will express how certain our priors are for $\beta_1, \dots, \beta7$. As is turns out, 
 
 * $\sigma = 0.3536465$ puts 95% of the prior mass between half of the expected value and twice the expected value,
-* $\sigma = 0.20687$ puts 95% of the prior mass between two-thirds of the expected value and $150\%$ of the expected value,
+* $\sigma = 0.20687$ puts 95% of the prior mass between two-thirds of the expected value and $150\%$ of the expected value, and
 * $\sigma = 0.1467766$ puts 95% of the prior mass between three-quarters of the expected value and four-thirds of the expected value.
 
-Execute the code, below, to see four yourself.
+Execute the code, below, to see for yourself.
 
 ```{r, eval = F}
 # sigma <- 0.3536465  # 1/2 on the low end; 2/1 on the high end
@@ -428,7 +430,7 @@ If you look closely, you'll see the $95\%$ intervals during the intervention pha
 
 ### The theory-based model.
 
-Between the dummy and one-hot models, we have a pretty good framework for analyzing a variety of changing-criterion data sets. But if you're willing to get a little weird, with me, I think we can do even better. When we set the priors for out one-hot model, covered how the changing-criterion design makes specific predictions about the conditional means during the intervention period. If our intervention brings the target behavior under experimental control, the average behavior rate should be equal to the criterion level. Why not just build that into the model formula? One way would be the model
+Between the dummy and one-hot models, we have a pretty good framework for analyzing a variety of changing-criterion data sets. But if you're willing to get a little weird, I think we can do even better. When we set the priors for out one-hot model, we covered how the changing-criterion design makes specific predictions about the conditional means during the intervention period. If our intervention brings the target behavior under experimental control, the average behavior rate should be equal to the criterion level. Why not just build that into the model formula? One way would be the model
 
 $$
 \begin{align*}
@@ -536,7 +538,7 @@ fit3 <- add_criterion(fit3, criterion = "loo")
 loo_compare(fit1, fit2, fit3, criterion = "loo") %>% print(simplify = F)
 ```
 
-The dummy and one-hot models are very similar, which shouldn't be a big surprise. Look how well our gutsy two-parameter theory-based model is doing, though. This sins it commits with its overconfidence are made up for by its parsimony. This might not hold for all data sets, though. The theory-based model only works if you have strong experimental control over the target behavior.
+The dummy and one-hot models are very similar, which shouldn't be a big surprise. Look how well our gutsy two-parameter theory-based model is doing, though. The sins it commits with its overconfidence are made up for by its parsimony. This might not hold for all data sets, though. The theory-based model only works if you have strong experimental control over the target behavior.
 
 ### How big is it?
 
@@ -576,7 +578,7 @@ Our unstandardized pre/post mean difference is $78.2, 95\% \text{CI}\ [69.5, 87.
 
 ### Phase contrasts.
 
-The line plots for all out models show a clear and dramatic reduction of Amy's checking behavior following the onset of the exposure-based intervention. A strength of the changing criterion design is it allows researchers to make very specific predictions about the rate differences in each phase shift. If all goes well, the difference in the average rate in one phase to the next should be the same as the difference in the criterion level for those two phases. Consider the following table.
+The line plots for all our models show a clear and dramatic reduction of Amy's checking behavior following the onset of the exposure-based intervention. A strength of the changing criterion design is it allows researchers to make very specific predictions about the rate differences in each phase shift. If all goes well, the difference in the average rate in one phase to the next should be the same as the difference in the criterion level for those two phases. Consider the following table.
 
 ```{r}
 # save the expected contrasts
