--- a/sketches/Wagenmakers et al (2016) Albohn only.Rmd
+++ b/sketches/Wagenmakers et al (2016) Albohn only.Rmd
@@ -1188,6 +1188,46 @@ p1 + p2 +
 
 Both versions of the cumulative-probit model do a great job simulating new data boasting the same basic characteristics as the empirical data. Both models respected the ordinal nature of the data, including the lower and upper limits. They also respected the asymmetric shape of the overall distribution.
 
+#### Kicks and giggles.
+
+Jut for kicks and giggles, here's how you might pot the conditional means from the full cumulative-probit MELSM along with the sample data. For reference, the layout of this plot came from a nice twitter discussion, which you can find [here](https://twitter.com/SolomonKurz/status/1517871041271549955).
+
+```{r, warning = F}
+# update
+unstandardized_means <- unstandardized_means %>% 
+  filter(name != "dif") %>% 
+  mutate(cartoon = as.double(k))
+
+# wrangle
+albohn %>% 
+  mutate(condition = ifelse(condition == 1, "smile", "pout")) %>% 
+
+  # plot!
+  ggplot(aes(x = rating)) +
+  geom_bar(data = . %>% filter(condition == "smile"),
+           aes(fill = condition)) +
+  geom_bar(data = . %>% filter(condition == "pout"),
+           aes(y = -..count.., fill = condition)) +
+  geom_hline(yintercept = 0, size = 1, color = "gray96") +
+  geom_pointrange(data = unstandardized_means %>% filter(name == "smile"),
+                  aes(x = mu, xmin = .lower, xmax = .upper, y = -0.7),
+                  fatten = 1, size = .65) +
+  geom_pointrange(data = unstandardized_means %>% filter(name == "pout"),
+                  aes(x = mu, xmin = .lower, xmax = .upper, y = 0.7),
+                  fatten = 1, size = .65) +
+  scale_fill_viridis_d("condition:", option = "D", begin = .4, end = .7, alpha = .6) +
+  scale_x_continuous("funniness rating", breaks = 0:9) +
+  scale_y_continuous("count",
+                     breaks = -2:2 * 10, labels = c(2:1, 0:2) * 10,
+                     limits = c(-20, 20)) +
+  labs(title = "(2016) Strack [failed] replication results (Albohn lab only)",
+       subtitle = "The sideways histograms show the sample data. The black point-intervals show the conditional\nmeans and their 95% intervals from the cumulative-probit MELSM. The similarity of the two point-\nintervals within each facet go against the predictions from the original Strack study. Tricking\nparticipants into smiling or frowning did not meaningfully effect show they rated the cratoons.") +
+  theme(panel.grid = element_blank(),
+        legend.position = "bottom") +
+  facet_wrap(~ cartoon, labeller = label_both, nrow = 1) +
+  coord_flip()
+```
+
 #### Next steps.
 
 As complicated as it is, our distributional cumulative-probit model could be made more general in a couple ways. First, did you notice that the thresholds $\tau_{1}, \dots, \tau_{9}$ were held constant across the four cartoons and the two experimental conditions? You could allow them to vary with the `thres()` function and its `gr` argument. For this data set, the differences were so small between the experimental conditions an across the four cartoons that this would have made very little difference. But in cases with greater heterogeneity, you might explore this option.
